Fix issue #8 and update to modern build/dependencies.